--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "jspdf": "^3.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
     "mapbox-gl": "^3.10.0",
