--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,16 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "frontend": "file:",
+    "heatmap.js": "^2.0.5",
     "jspdf": "^3.0.0",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.479.0",
     "mapbox-gl": "^3.10.0",
     "next": "15.2.2",
@@ -33,6 +37,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-heatmap-layer": "^2.0.0",
     "react-select": "^5.10.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
