--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "heatmap.js": "^2.0.5",
     "jspdf": "^3.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.479.0",
     "mapbox-gl": "^3.10.0",
@@ -52,6 +53,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/canvas-confetti": "^1.9.0",
     "@types/leaflet": "^1.9.16",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
