--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -47,11 +47,16 @@ jobs:
         working-directory: frontend
         run: npx cap sync android
 
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-home-cache-cleanup: true
+
       - name: Build debug APK
         working-directory: frontend/android
         run: |
           chmod +x gradlew
-          ./gradlew assembleDebug
+          ./gradlew assembleDebug --no-daemon --max-workers 2 --stacktrace
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
