--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -56,7 +56,7 @@ jobs:
         working-directory: frontend/android
         run: |
           chmod +x gradlew
-          ./gradlew assembleDebug --no-daemon --max-workers 2 --stacktrace
+          ./gradlew assembleDebug --no-daemon
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
