--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
-          gradle-home-cache-cleanup: true
+          cache-cleanup: always
 
       - name: Build debug APK
         working-directory: frontend/android
